# dr4hui-backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  project.txt
backend/include/cum/ifc/: dr4_impl.hpp  pp_impl.hpp
backend/include/dr4/: converts.hpp  font_impl.hpp  img_impl.hpp  primitives_impl.hpp  text_impl.hpp  texture_impl.hpp  window_impl.hpp
backend/include/pp/shapes/: brush.hpp  circle.hpp  line.hpp  rect.hpp  text.hpp
backend/include/pp/tools/: brush.hpp  circle.hpp  line.hpp  rect.hpp  text.hpp
backend/source/cum/ifc/: dr4_impl.cpp  pp_impl.cpp
backend/source/dr4/: backend_impl.cpp  converts.cpp  dr4_impl.cpp  font_impl.cpp  img_impl.cpp  primtives_impl.cpp  text_impl.cpp  texture_impl.cpp  window_impl.cpp
backend/source/pp/: pp_impl.cpp
backend/source/pp/shapes/: brush.cpp  circle.cpp  line.cpp  rect.cpp  text.cpp
backend/source/pp/tools/: brush.cpp  circle.cpp  line.cpp  rect.cpp  text.cpp
cmake/: funcs.cmake
examples/: main.cpp
include/: backend.hpp  texture.hpp  window.hpp
scripts/: build.sh  run.sh
source/: backend.cpp  texture.cpp  window.cpp
